# home_workbench

./: .coveragerc  .dockerignore  .env  .gitignore  .pre-commit-config.yaml  Dockerfile  Pipfile  README.md  docker-compose.debug.yml  docker-compose.override.yml  docker-compose.yml  home_workbench.code-workspace  package-lock.json  pyproject.toml  setup.cfg  spd3303c.json
.github/workflows/: publish-docker.yml  test.yml
home_workbench/: __main__.py  database.py  spd3303c.py  workbench_helper.py
test/: test_database.py  test_home_workbench.py
workbench_web/: __main__.py  main.py  workbench_web.py
workbench_web/backend/: Dockerfile  requirements.txt
workbench_web/backend/app/app/: __main__.py  workbench_web.py  workbench_web_helper.py
workbench_web/backend/app/app/core/: config.py
workbench_web/backend/app/app/crud/: measurement.py
workbench_web/backend/app/app/db/: database.py  spd3303c.py
workbench_web/backend/app/app/models/: measurement.py
workbench_web/backend/app/app/schemas/: measurement.py
workbench_web/backend/app/app/tests/: test_database.py
workbench_web/frontend/: Dockerfile  nginx-backend-not-found.conf  nginx.conf  package-lock.json  package.json
workbench_web/frontend/public/: index.html
workbench_web/frontend/src/: App.vue  chart_helpers.js
workbench_web/frontend/src/components/: PowerSupplyCard.vue  SolarMonitorChart.vue
workbench_web/public/: chart_helpers.js  index.html
workbench_web/src/: App.vue
workbench_web/src/components/: PowerSupplyCard.vue
workbench_web/templates/: index.html
